# ml-peg-ui

./: .env.example  .gitignore  .vercelignore  next.config.ts  package.json  pyproject.toml  vercel.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/phases/01-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/research/: SUMMARY.md  backend-api.md  data-model.md  deployment-architecture.md  frontend-components.md
api/: index.py  models.py  storage.py
scripts/: build_diatomic_index.py
src/: plotly.d.ts
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/[category]/: layout.tsx  (+1 more)
src/components/: AppHeader.tsx  BenchmarkSubTabs.tsx  CategoryTabs.tsx  DiatomicChart.tsx  DiatomicViewer.tsx  FaqSection.tsx  FigureDrawer.tsx  FigureSkeleton.tsx  LeaderboardTable.tsx  Mol3DViewer.tsx  NebBenchmarkViewer.tsx  NebStructurePlayer.tsx  NebViewer.tsx  PeriodicTable.tsx  PlotlyChart.tsx  StructureModal.tsx  SummaryTable.tsx  TableSkeleton.tsx  TutorialModal.tsx  WeightControls.tsx
src/lib/: api.ts  color.test.ts  color.ts  filter-context.tsx  filter-utils.test.ts  format.test.ts  format.ts  model-links.test.ts  model-links.ts  neb-constants.ts  score-calc.test.ts  score-calc.ts  summary-calc.test.ts  tutorial-storage.test.ts  types.ts
tests/: conftest.py  test_api.py  test_config.py  test_diatomics.py  test_models.py  test_nebs.py  test_storage.py  test_storage_get_bytes.py  test_structures.py
(+53 files in other folders)
