[project]
name = "ml-peg-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "minio>=7.2.0",
    "python-dotenv>=1.0.0",
    "ase>=3.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires MinIO connection"]
